force-app/main/default/objects/Movie_Category__c/Movie_Category__c.object-meta.xml
<CustomObject>
    <label>Movie Category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movie Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>