force-app/main/default/objects/Movie_Category__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>+6</fullName>
                <default>true</default>
                <label>+6</label>
            </value>
            <value>
                <fullName>+12</fullName>
            </value>
            <value>
                <fullName>+16</fullName>
            </value>
            <value>
                <fullName>+18</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>