force-app/main/default/objects/Movie_Category__c/fields/Average_Duration__c.field-meta.xml
<CustomField>
    <fullName>Average_Duration__c</fullName>
    <label>Average Duration</label>
    <required>true</required>
    <type>Time</type>
</CustomField>