force-app/main/default/objects/Movie_Category__c/fields/Family_friendly__c.field-meta.xml
<CustomField>
    <fullName>Family_friendly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family friendly</label>
    <type>Checkbox</type>
</CustomField>