force-app/main/default/objects/Movie_Category__c/fields/Number_Movies__c.field-meta.xml
<CustomField>
    <fullName>Number_Movies__c</fullName>
    <label>Number Movies</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>