force-app/main/default/objects/Movie_Category__c/fields/Preview_Image__c.field-meta.xml
<CustomField>
    <fullName>Preview_Image__c</fullName>
    <label>Preview Image</label>
    <type>Url</type>
</CustomField>