force-app/main/default/objects/Movie_Category__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Violent</fullName>
            </value>
            <value>
                <fullName>Funny</fullName>
            </value>
            <value>
                <fullName>Serious</fullName>
            </value>
            <value>
                <fullName>bloody</fullName>
            </value>
            <value>
                <fullName>Childish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>